--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   </a>
                 </a>
               </div>
-              <span id="openNav" onclick="openNav()">MENU &#9776;</span>
+              <!--<span id="openNav" onclick="openNav()">MENU &#9776;</span>-->
               <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a href="#" onclick="closeNav()" >About Me</a>
