--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       				<b class="is-visible">Steak</b>
       			</span>
       		</h1>
-          <p>EVERYTHING CAN CHANGE IF YOU THINK AGAIN</p>
+          <p>EVERYTHING CAN BE CHANGE, IF YOU THINK AGAIN!</p>
       	</section>
         <section class="about" id="about">
           <div class="container">
