--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
       				<b class="is-visible">Steak</b>
       			</span>
       		</h1>
-          <p>EVERYTHING CAN BE CHANGE, IF YOU THINK AGAIN! <br> <a href="https://www.linkedin.com/in/irhamciptadi" class="linkedIn" style="
+          <p>EVERYTHING CAN BE CHANGE, IF YOU THINK AGAIN!</p>
+          <br> <a href="https://www.linkedin.com/in/irhamciptadi" class="linkedIn" style="
     text-decoration: none;
     font-size: 15px;
     color: #000;
                                                                            ">Find me on <span style="
     color: #337ab7;
 ">LinkedIn →</span></a>
-</p>
       	</section>
         <section class="about" id="about">
           <div class="container">
