--- a/index.html
+++ b/index.html
@@ -65,17 +65,15 @@
       		<h1 class="cd-headline clip is-full-width">
       			<span>Think Big Like</span>
       			<span class="cd-words-wrapper" style="width: 143px;">
-              <b class="is-hidden">Kids</b>
-              <b class="is-hidden">Galaxy</b>
+              <b class="is-hidden">Baby</b>
               <b class="is-hidden">Oppa</b>
               <b class="is-hidden">Monkey</b>
-              <b class="is-hidden">Omma</b>
-              <b class="is-hidden">Krab</b>
-              <b class="is-hidden">GrandMather</b>
+              <b class="is-hidden">GrandMother</b>
               <b class="is-hidden">GrandFather</b>
       				<b class="is-hidden">Pizza</b>
       				<b class="is-hidden">Sushi</b>
-      				<b class="is-visible">Steak</b>
+      				<b class="is-hidden">Steak</b>
+              <b class="is-visible">Galaxy</b>
       			</span>
       		</h1>
           <p>EVERYTHING CAN BE CHANGE, IF YOU THINK AGAIN!</p>
