--- a/index.html
+++ b/index.html
@@ -1,222 +1,64 @@
-<html>
-  <head>
-    <title>MA</title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Irham Ciptadi"/>
-    <meta name="description" content=""/>
-    <link rel="shortcut icon" href="img/ma.jpg">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- Css style -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <!-- <link rel="stylesheet" href="css/reset.css"> <! CSS reset > -->
-  	<link rel="stylesheet" href="css/stylet.css"> <!-- Resource style -->
-  	<script src="js/modernizr.js"></script> <!-- Modernizr -->
-    <!-- font -->
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script> <!-- Resource jQuery -->
-  </head>
-  <body>
-    <div id="wrapper">
-      <header>
-        <div class="container-fluid">
-          <nav class="navbar navbar-default">
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>MQ</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <div class="navbar-header">
                 <a class="navbar-brand" href="#">
-                  <a href="index.html" class="navbar-brand">
-                    <img alt="Brand" class="logo" height="50" width="50" src="img/ma.jpg">
-                  </a>
+                    devTools Helpers
                 </a>
-              </div>
-              <!--<span id="openNav" onclick="openNav()">MENU &#9776;</span>-->
-              <div id="mySidenav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="#" onclick="closeNav()" >About Me</a>
-                <a href="#" onclick="closeNav()">Portofolio</a>
-                <a href="#" onclick="closeNav()">Let's Talk</a>
-              </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="mq.html">Insert MQ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </nav>
+        </nav>
+        <div class="container-fluid py-4">
+            <div class="p-5 mb-4 bg-light rounded-3">
+                <div class="container-fluid py-5">
+                  <h1 class="display-5 fw-bold">Custom jumbotron</h1>
+                  <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+                  <button class="btn btn-primary btn-lg" type="button">Example button</button>
+                </div>
+            </div>
+            <div class="row align-items-md-stretch">
+                <div class="col-md-6">
+                    <div class="h-100 p-5 text-white bg-dark rounded-3">
+                        <h2>Change the background</h2>
+                        <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
+                        <button class="btn btn-outline-light" type="button">Example button</button>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="h-100 p-5 bg-light border rounded-3">
+                        <h2>Add borders</h2>
+                        <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+                        <button class="btn btn-outline-secondary" type="button">Example button</button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </header>
-      <main id="main">
-        <!-- <section class="info">
-          <div class="container">
-            <div class="row" id="content">
-              <div class="col-xs-12">
-                <div class="text-wrapper animated bounceInDown">
-                  <h1 style="font-size:45px;">&quot;Think Big Like Galaxy&quot;</h1>
-                  <p>By Lorem Ipsum</p>
-                </div> -->
-                <!-- <a href="#"><div class="arrow-down animated infinite bounce"></div></a> -->
-              <!-- </div>
-            </div>
-          </div>
-        </section> -->
-        <section class="cd-intro">
-      		<h1 class="cd-headline clip is-full-width">
-      			<span>Think Big Like</span>
-      			<span class="cd-words-wrapper" style="width: 143px;">
-              <b class="is-hidden">Baby</b>
-              <b class="is-hidden">Oppa</b>
-              <b class="is-hidden">Monkey</b>
-              <b class="is-hidden">GrandMother</b>
-              <b class="is-hidden">GrandFather</b>
-      				<b class="is-hidden">Pizza</b>
-      				<b class="is-hidden">Sushi</b>
-      				<b class="is-hidden">Steak</b>
-              <b class="is-visible">Galaxy</b>
-      			</span>
-      		</h1>
-          <p>EVERYTHING CAN BE CHANGE, IF YOU THINK AGAIN!</p>
-          <br> <a href="https://www.linkedin.com/in/irhamciptadi" class="linkedIn" style="
-    text-decoration: none;
-    font-size: 15px;
-    color: #000;
-                                                                           ">Find me on <span style="
-    color: #337ab7;
-">LinkedIn →</span></a>
-      	</section>
-        <section class="about" id="about">
-          <div class="container">
-            <div class="row">
-              <div class="col-xs-12 col-sm-3">
-                <img alt="profile" src="http://thamrin.ac.id/medias/aplikasi/icon_student.png" class="img img-responsive profile"></img>
-              </div>
-              <div class="col-xs-12 col-sm-9">
-                <p style="padding-top:40px;">We work with entrepreneurs and forward-looking companies to transform ideas into products that HELP, CHALLENGE, and INSPIRE. We are:</p>
-                <p><em>Connectors</em> who think beyond the screen, bridging the gap between digital and reality.<br><br>
-                <em>Makers</em> that create ‘holy canoli, that is amazing’ moments.<br><br>
-                <em>Thinkers</em> that bring those late night ramblings and early morning thoughts to life.</p>
-                <p>Not in a rush? Here’s a bit more about <a href="page/about.html">who we are.</a><br></p>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="portofolio" id="portofolio">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-4">
-                <img src="https://feel.com.au/images/img82.png" media="(max-width: 767px)" alt="portofolio" class="img-thumbnail" id="img-portofolio"></img>
-              </div>
-              <div class="col-sm-4">
-                <img src="https://feel.com.au/images/monster-feature.jpg" media="(max-width: 767px)" alt="portofolio" class="img-thumbnail" id="img-portofolio"></img>
-              </div>
-              <div class="col-sm-4">
-                <img src="https://feel.com.au/images/img62.png" media="(max-width: 767px)" alt="..." class="img-thumbnail" id="img-portofolio"></img>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="contact" id="contact">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-3">
-              </div>
-              <div class="col-sm-6">
-                <form>
-                  <div class="form-group">
-                    <label for="subject">Subject</label>
-                    <input type="text" class="form-control" id="subject" placeholder="Subject">
-                  </div>
-                  <div class="form-group">
-                    <label for="eamil">Email</label>
-                    <input type="email" class="form-control" id="eamil" placeholder="Email">
-                  </div>
-                  <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea class="form-control" id="message" placeholder="Message" style="margin: 0px -2px 0px 0px; height: 180px; width: 100%; resize:none;"></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-primary" style="float:right;"><span class="glyphicon glyphicon-send" aria-hidden="true"></span> Send</button>
-                </form>
-              </div>
-              <div class="col-sm-3">
-              </div>
-            </div>
-          </div>
-        </section>
-      </main>
-      <footer>
-      </footer>
-    </div>
-    <script type="text/javascript">
-    	// function ChangeUrl(page, url) {
-      //     if (typeof (history.pushState) != "undefined") {
-      //         var obj = { Page: page, Url: url };
-      //         history.pushState(obj, obj.Page, obj.Url);
-      //     } else {
-      //         alert("Browser does not support HTML5.");
-      //     }
-      // }
-
-      // $("#back_profile").on("click", function(e){
-    	// 	e.preventDefault();
-    	// 	ChangeUrl('profile', 'profile');
-      //
-    	// 	$.ajax({
-    	// 		type: "POST",
-    	// 		url: "<?php echo site_url("profile/view") ?>",
-    	// 		before:function(msg)
-    	// 		{
-    	// 			$("#content-page").html("<i class='fa fa-spinner fa-spin fa-3x fa-fw'></i><span class='sr-only'>Loading...</span>");
-    	// 		},
-    	// 		success:function(msg)
-    	// 		{
-    	// 			$("#content-page").html(msg);
-    	// 			$('#content-page').addClass('animated fadeInRight').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
-    	// 				$(this).removeClass('animated fadeInRight');
-    	// 			});
-    	// 		},
-    	// 		error:function(msg)
-    	// 		{
-    	// 			$("#content-page").html("<?php $this->load->view("errors/404.php") ?>");
-    	// 			$('#content-page').addClass('animated fadeInRight').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
-    	// 				$(this).removeClass('animated fadeInRight');
-    	// 			});
-    	// 		}
-    	// 	});
-    	// });
-      //
-    	// $("#reload_page").on("click", function(e){
-    	// 	var ide = "";
-    	// 	$.ajax({
-    	// 		type:"POST",
-    	// 		data:{
-    	// 			ide : ide
-    	// 		},
-    	// 		url: "<?php echo site_url('profile/edit_profile') ?>",
-    	// 		success:function(msg){
-    	// 			$("#content-page").html(msg);
-    	// 			$('#content-page').addClass('animated fadeInRight').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
-    	// 				$(this).removeClass('animated fadeInRight');
-    	// 			});
-    	// 		},
-    	// 		error:function(msg)
-    	// 		{
-    	// 			$("#content-page").html("<?php $this->load->view("errors/404.php") ?>");
-    	// 			$('#content-page').addClass('animated fadeInRight').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
-    	// 				$(this).removeClass('animated fadeInRight');
-    	// 			});
-    	// 		}
-    	// 	});
-    	// });
-    </script>
-    <script>
-      function openNav() {
-          document.getElementById("mySidenav").style.width = "100%";
-      }
-
-      function closeNav() {
-          document.getElementById("mySidenav").style.width = "0";
-      }
-    </script>
-  </body>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+        <script src="js/my.js"></script>
+    </body>
 </html>
