--- a/mq/index.html
+++ b/mq/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MQ</title>
+    <title>devTools Helpers</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,55 +30,105 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="container-fluid py-4">
-      <div class="p-5 mb-4 bg-light rounded-3">
-        <div class="container-fluid py-5">
-          <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-          <p class="col-md-8 fs-4">
-            Using a series of utilities, you can create this jumbotron, just
-            like the one in previous versions of Bootstrap. Check out the
-            examples below for how you can remix and restyle it to your liking.
-          </p>
-          <button class="btn btn-primary btn-lg" type="button">
-            Example button
-          </button>
-        </div>
-      </div>
-      <div class="row align-items-md-stretch">
-        <div class="col-md-6">
-          <div class="h-100 p-5 text-white bg-dark rounded-3">
-            <h2>Change the background</h2>
-            <p>
-              Swap the background-color utility and add a `.text-*` color
-              utility to mix up the jumbotron look. Then, mix and match with
-              additional component themes and more.
-            </p>
-            <button class="btn btn-outline-light" type="button">
-              Example button
-            </button>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="h-100 p-5 bg-light border rounded-3">
-            <h2>Add borders</h2>
-            <p>
-              Or, keep it light and add a border for some added definition to
-              the boundaries of your content. Be sure to look under the hood at
-              the source HTML here as we've adjusted the alignment and sizing of
-              both column's content for equal-height.
-            </p>
-            <button class="btn btn-outline-secondary" type="button">
-              Example button
-            </button>
-          </div>
-        </div>
-      </div>
+    <div class="container-fluid" style="padding-top: 10px">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th class="text-center">type</th>
+            <th class="text-center">class</th>
+            <th class="text-center">param_name</th>
+            <th class="text-center"></th>
+          </tr>
+        </thead>
+        <tbody id="tbody"></tbody>
+        <tfoot>
+          <tr>
+            <td colspan="4">
+              <button
+                class="btn btn-md btn-primary"
+                id="addRowTable"
+                type="button"
+              >
+                Add new Row
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">&nbsp;</td>
+          </tr>
+          <tr>
+            <td colspan="4"><b>Kode MQ::</b></td>
+          </tr>
+          <tr>
+            <td colspan="4">
+              <input
+                type="text"
+                name="kode_mq"
+                id="kode_mq"
+                class="form-control"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4"><b>Name MQ::</b></td>
+          </tr>
+          <tr>
+            <td colspan="4">
+              <input
+                type="text"
+                name="name_mq"
+                id="name_mq"
+                class="form-control"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4"><b>Sql::</b></td>
+          </tr>
+          <tr>
+            <td colspan="4">
+              <textarea
+                class="form-control"
+                name="sql"
+                id="sql"
+                cols="30"
+                rows="3"
+              ></textarea>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">
+              <button
+                class="btn btn-md btn-success"
+                id="generate"
+                type="button"
+              >
+                Generate
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4"><b>Result::</b></td>
+          </tr>
+          <tr>
+            <td colspan="4">
+              <textarea
+                class="form-control"
+                name="result"
+                id="result"
+                cols="30"
+                rows="10"
+              ></textarea>
+            </td>
+          </tr>
+        </tfoot>
+      </table>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script
@@ -91,6 +141,6 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
-    <script src="js/my.js"></script>
+    <script src="js/mq.js"></script>
   </body>
 </html>
